--- a/config
+++ b/config
@@ -1,9 +1,12 @@
 # i3 configuration file
-exec --no-startup-id \
+exec_always --no-startup-id \
        /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 & \
        eval $(gnome-keyring-daemon -s --components=pkcs11,secrets,ssh,gpg) &
 
-
+# keyboard layouts
+exec_always --no-startup-id \
+       setxkbmap -layout us,gr option grp:alt_shift_toggle
+ 
 # --------- general options ----------------
 
 workspace_layout tabbed
@@ -166,8 +169,11 @@ bindsym $Mod+comma [title=".*"] scratchpad show
 # - Workspaces
 # -------------------------
 
-bindsym --whole-window $Mod+button4 workspace next_on_output 
-bindsym --whole-window $Mod+button5 workspace prev_on_output 
+bindsym --whole-window $Mod+button4 workspace prev_on_output 
+bindsym --whole-window Mod1+button4 focus left
+
+bindsym --whole-window $Mod+button5 workspace next_on_output 
+bindsym --whole-window Mod1+button5 focus right
 
 # switch to workspace
 bindsym $Mod+0 workspace "0"
@@ -360,6 +366,10 @@ exec --no-startup-id \
        xrandr --output HDMI-2 \
               --mode 1920x1080 \
               --rate 60.00 \
+              --output DP-1 \
+              --mode 1920x1080 \
+              --rate 60.00 \
+              --right HDMI-2 \
               --output eDP-1 \
               --mode 1920x1080 \
               --rate 60.01 \
